# AAPL

./: LICENSE  README.md
annotation/: README.md  via_video_annotator.html
training/: README.md  main.py  pyproject.toml
training/configs/: thumos14.yaml
training/src/aapl/config/: __init__.py  _dataset.py  _inference.py  _logging.py  _model.py  _optim.py  autofill.py  io.py  schema.py
training/src/aapl/config/presets/: __init__.py  aapl.py  datasets.py
training/src/aapl/datasets/: __init__.py  factory.py  feature_loaders.py  loader.py  structures.py  temporal_samplers.py  video_dataset.py
training/src/aapl/engines/: __init__.py  common_utils.py  evaluator.py  factory.py  trainer.py
training/src/aapl/models/: __init__.py  aapl_model.py  embedders.py  factory.py  heads.py  predictors.py
training/src/aapl/optim/: __init__.py  factory.py
training/src/aapl/utils/: logging.py  misc.py  mlflow.py  proposals.py  temporal_sampling.py
training/src/aapl/utils/anet/: evaluator.py  io.py
